# Chansaren

./: CMakeLists.txt  Chansaren.cpp  Chansaren.h  GUIEngineGame.h  Kaart.h  Kaarten.h  Player.cpp  Player.h  README.md  Table.cpp  Table.h  kaart.cpp  kaarten.cpp  logic.cpp  logic.h  tests.cpp  tests.h
